test/corpus/BCC.txt
==========================
BCC $BB
==========================

bcc $084A
bcc 2122
bcc %100001001010

---

(asm
  (inst
    (rel_opc
      (bcc_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bcc_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bcc_opc)
      (num_16
        (bin_num_16)))))
