test/corpus/BCS.txt
==========================
BCS $BB
==========================

bcs $084A
bcs 2122
bcs %100001001010

---

(asm
  (inst
    (rel_opc
      (bcs_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bcs_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bcs_opc)
      (num_16
        (bin_num_16)))))
