test/corpus/BEQ.txt
==========================
BEQ $BB
==========================

beq $084A
beq 2122
beq %100001001010

---

(asm
  (inst
    (rel_opc
      (beq_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (beq_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (beq_opc)
      (num_16
        (bin_num_16)))))
