test/corpus/BIT.txt
==========================
BIT $LL
==========================

bit $b3
bit 233
bit %1101110

---

(asm
  (inst
    (zpg_opc
      (bit_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (bit_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (bit_opc)
      (num_8
        (bin_num_8)))))

==========================
BIT $HHLL
==========================

bit $634C
bit 25420
bit %110001101001100

---

(asm
  (inst
    (abs_opc
      (bit_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (bit_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (bit_opc)
      (num_16
        (bin_num_16)))))
