test/corpus/BMI.txt
==========================
BMI $BB
==========================

bmi $084A
bmi 2122
bmi %100001001010

---

(asm
  (inst
    (rel_opc
      (bmi_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bmi_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bmi_opc)
      (num_16
        (bin_num_16)))))
