test/corpus/BNE.txt
==========================
BNE $BB
==========================

bne $084A
bne 2122
bne %100001001010

---

(asm
  (inst
    (rel_opc
      (bne_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bne_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bne_opc)
      (num_16
        (bin_num_16)))))
