test/corpus/BPL.txt
==========================
BPL $BB
==========================

bpl $084A
bpl 2122
bpl %100001001010

---

(asm
  (inst
    (rel_opc
      (bpl_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bpl_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bpl_opc)
      (num_16
        (bin_num_16)))))
