test/corpus/BVS.txt
==========================
BVS $BB
==========================

bvs $084A
bvs 2122
bvs %100001001010

---

(asm
  (inst
    (rel_opc
      (bvs_opc)
      (num_16
        (hex_num_16))))
  (inst
    (rel_opc
      (bvs_opc)
      (num_16
        (dec_num_16))))
  (inst
    (rel_opc
      (bvs_opc)
      (num_16
        (bin_num_16)))))
