test/corpus/CPX.txt
==========================
CPX #$BB
==========================

cpx #$b3
cpx #233
cpx #%1101110

---

(asm
  (inst
    (imm_opc
      (cpx_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (cpx_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (cpx_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
CPX $LL
==========================

cpx $02
cpx 005
cpx %11011001

---

(asm
  (inst
    (zpg_opc
      (cpx_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (cpx_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (cpx_opc)
      (num_8
        (bin_num_8)))))

==========================
CPX $LLHH
==========================

cpx $b891
cpx 47249
cpx %1011100010010001

---

(asm
  (inst
    (abs_opc
      (cpx_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (cpx_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (cpx_opc)
      (num_16
        (bin_num_16)))))
