test/corpus/CPY.txt
==========================
CPY #$BB
==========================

cpy #$b3
cpy #233
cpy #%1101110

---

(asm
  (inst
    (imm_opc
      (cpy_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (cpy_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (cpy_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
CPY $LL
==========================

cpy $02
cpy 005
cpy %11011001

---

(asm
  (inst
    (zpg_opc
      (cpy_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (cpy_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (cpy_opc)
      (num_8
        (bin_num_8)))))

==========================
CPY $LLHH
==========================

cpy $b891
cpy 47249
cpy %1011100010010001

---

(asm
  (inst
    (abs_opc
      (cpy_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (cpy_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (cpy_opc)
      (num_16
        (bin_num_16)))))
