test/corpus/JSR.txt
==========================
JSR $HHLL
==========================

jsr $4000
jsr 16384
jsr %100000000000000

---

(asm
  (inst
    (abs_opc
      (jsr_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (jsr_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (jsr_opc)
      (num_16
        (bin_num_16)))))
