test/corpus/ROR.txt
==========================
ROR A
==========================

ror
ror a

---

(asm
  (inst
    (acc_opc
      (ror_opc)))
  (inst
    (acc_opc
      (ror_opc)
      (a_reg))))

==========================
ROR $LL
==========================

ror $02
ror 005
ror %11011001

---

(asm
  (inst
    (zpg_opc
      (ror_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (ror_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (ror_opc)
      (num_8
        (bin_num_8)))))

==========================
ROR $LL,X
==========================

ror $60,x
ror 199,x
ror %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (ror_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (ror_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (ror_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
ROR $LLHH
==========================

ror $b891
ror 47249
ror %1011100010010001

---

(asm
  (inst
    (abs_opc
      (ror_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (ror_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (ror_opc)
      (num_16
        (bin_num_16)))))

==========================
ROR $LLHH,X
==========================

ror $85fc,x
ror 1843,x
ror %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (ror_opc)
      (num_16
        (hex_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (ror_opc)
      (num_16
        (dec_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (ror_opc)
      (num_16
        (bin_num_16))
      (x_reg))))
