test/corpus/STA.txt
==========================
STA $LL
==========================

sta $02
sta 005
sta %11011001

---

(asm
  (inst
    (zpg_opc
      (sta_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (sta_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (sta_opc)
      (num_8
        (bin_num_8)))))

==========================
STA $LL,X
==========================

sta $60,x
sta 199,x
sta %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (sta_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (sta_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (sta_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
STA $LLHH
==========================

sta $b891
sta 47249
sta %1011100010010001

---

(asm
  (inst
    (abs_opc
      (sta_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (sta_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (sta_opc)
      (num_16
        (bin_num_16)))))

==========================
STA $LLHH,X
==========================

sta $85fc,x
sta 1843,x
sta %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (sta_opc)
      (num_16
        (hex_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (sta_opc)
      (num_16
        (dec_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (sta_opc)
      (num_16
        (bin_num_16))
      (x_reg))))

==========================
STA $LLHH,Y
==========================

sta $dc49,y
sta 56393,y
sta %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (sta_opc)
      (num_16
        (hex_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (sta_opc)
      (num_16
        (dec_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (sta_opc)
      (num_16
        (bin_num_16))
      (y_reg))))

==========================
STA ($LL,X)
==========================

sta ($DB,x)
sta (219,x)
sta (%11011011,x)

---

(asm
  (inst
    (x_ind_opc
      (sta_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (sta_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (sta_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
STA ($LL),Y
==========================

sta ($A9),y
sta (169),y
sta (%10101001),y

---

(asm
  (inst
    (ind_y_opc
      (sta_opc)
      (num_8
        (hex_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (sta_opc)
      (num_8
        (dec_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (sta_opc)
      (num_8
        (bin_num_8))
      (y_reg))))

